@@ -1,6 +1,7 @@
-2011-04-18  Hendrik Tews <prooftree@askra.de>
+2011-04-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
-	* release version 0.1
+	* undo release
+	* makefile fix
 
 2011-04-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
